--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,9 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings":
-  {
-    "SqlConnection":"Server=db;Database=master;User=sa;Password=Your_password123;"
+  "ConnectionStrings": {
+    "SqlConnection": "Server=db;Database=master;User=sa;Password=Your_password123;"
   },
   "Vault": {
     "Url": "http://vault:8200",
